# diy-clock

./: README.md
arduino/7seg/: 7seg.ino
electronics/: .gitignore
electronics/clock/: clock.bak  clock.kicad_pcb  clock.kicad_prl  clock.kicad_pro  clock.kicad_sch  fp-info-cache
electronics/clock/clock.pretty/: OSL40391-LRA.kicad_mod
electronics/clock/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
firmware/: Cargo.toml  rust-toolchain.toml  write.sh
firmware/.cargo/: config.toml
firmware/avr-specs/: avr-attiny2313.json
firmware/src/: delay.rs  lib.rs  main.rs  panic.rs  ssd.rs  switches.rs
hardware/clock/: clock.kicad_sym  sym-lib-table
hardware/clock/clock.pretty/: OSL10561-LRA.kicad_mod
scripts/: fuse.sh  write.sh
